--- a/snippets/cssclasses/compact.css
+++ b/snippets/cssclasses/compact.css
@@ -2,51 +2,69 @@
 FAS - Compact
 Author: ElsaTam (Kapirklaa in Discord)
 */
-/* Both */
-.compact:is(.markdown-source-view, .markdown-preview-view) {
-  --callout-title-padding: 5px 12px;
-  --callout-content-padding: var(--size-2-3) var(--size-2-3) var(--size-2-3) var(--size-4-3);
-  --table-cell-vertical-alignment: middle;
-  --p-spacing: 0.6rem;
-  --heading-spacing: calc(var(--p-spacing) * 1.5);
-  --line-height-normal: 1.25;
-  --line-height-tight: 1;
-  --metadata-padding: var(--size-4-3) var(--size-4-1) var(--size-4-1) var(--size-4-1);
+body {
+  --fas-compact: disable;
 }
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout {
-  margin-block: 0.3em;
+
+.compact {
+  --fas-compact: enable;
 }
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout-icon {
-  --icon-size: 14px;
+
+@container style(--fas-compact: enable) {
+  :is(.markdown-source-view, .markdown-preview-view),
+  .compact:is(.markdown-source-view, .markdown-preview-view) > * {
+    --callout-title-padding: 5px 12px;
+    --callout-content-padding: var(--size-2-3) var(--size-2-3) var(--size-2-3) var(--size-4-3);
+    --table-cell-vertical-alignment: middle;
+    --table-line-height: 1;
+    --p-spacing: 0.6rem;
+    --heading-spacing: calc(var(--p-spacing) * 1.5);
+    --line-height-normal: 1.25;
+    --line-height-tight: 1;
+    --metadata-padding: var(--size-4-3) var(--size-4-1) var(--size-4-1) var(--size-4-1);
+  }
+  .compact:is(.markdown-source-view, .markdown-preview-view) > * {
+    line-height: var(--line-height-normal);
+  }
+  .callout {
+    margin-block: 0.3em;
+  }
+  .callout-icon {
+    --icon-size: 14px;
+  }
+  .callout-content > *:first-child {
+    margin-block-start: 0px;
+  }
+  .callout-content > *:last-child {
+    margin-block-end: 0px;
+  }
+  .callout[data-callout=grid] > .callout-content {
+    gap: 0.3em;
+  }
+  .callout[data-callout=fas-infobox] {
+    --p-spacing: 0rem;
+    --h1-line-height: 1.4;
+  }
+  .callout[data-callout=fas-infobox] h1 {
+    --h1-size: 1.5em;
+  }
+  audio {
+    height: 32px;
+  }
+  audio::-webkit-media-controls-current-time-display,
+  audio::-webkit-media-controls-time-remaining-display {
+    font-size: 12px;
+  }
+  .markdown-rendered table :is(td, th):empty {
+    height: unset;
+  }
 }
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout-content > *:first-child {
-  margin-block-start: 0px;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout-content > *:last-child {
-  margin-block-end: 0px;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout[data-callout=grid] > .callout-content {
-  gap: 0.3em;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) :where .callout[data-callout=infobox],
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout[data-callout=fas-infobox] {
-  --p-spacing: 0;
-  --h1-line-height: 1.4;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) :where .callout[data-callout=infobox] h1,
-.compact:is(.markdown-source-view, .markdown-preview-view) .callout[data-callout=fas-infobox] h1 {
-  --h1-size: 1.5em;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) audio {
-  height: 32px;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) audio::-webkit-media-controls-current-time-display,
-.compact:is(.markdown-source-view, .markdown-preview-view) audio::-webkit-media-controls-time-remaining-display {
-  font-size: 12px;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) table {
-  line-height: 1;
-}
-.compact:is(.markdown-source-view, .markdown-preview-view) table :is(td, th):empty {
-  height: unset;
+@container style(--fas-compact: enable) and style(--fas-callout-infobox: enable) {
+  .callout[data-callout=infobox] {
+    --p-spacing: 0rem;
+    --h1-line-height: 1.4;
+  }
+  .callout[data-callout=infobox] h1 {
+    --h1-size: 1.5em;
+  }
 }
