--- a/snippets/editor/callouts/callout-blank.css
+++ b/snippets/editor/callouts/callout-blank.css
@@ -2,17 +2,22 @@
 FAS - Callout Blank
 Author: ElsaTam (Kapirklaa in Discord)
 */
+.callout[data-callout-metadata~=blank],
 .callout[data-callout=blank] {
   margin: 0;
   padding: 0;
+  mix-blend-mode: normal;
   border: none;
   background: none;
+  border-radius: 0;
 }
+.callout[data-callout-metadata~=blank] > .callout-content,
 .callout[data-callout=blank] > .callout-content {
   padding: 0;
   background: none;
   border: none;
 }
+.callout[data-callout-metadata~=blank] > .callout-title,
 .callout[data-callout=blank] > .callout-title {
   display: none;
 }
