--- a/snippets/editor/tables/plain-table.css
+++ b/snippets/editor/tables/plain-table.css
@@ -1,4 +1,5 @@
 body {
+  --fas-table-style: default;
   --table-header-background: transparent;
   --table-line-height: 1.8;
   --table-border-color: var(--color-base-10);
@@ -25,4 +26,26 @@ body {
 
 :is(.cm-html-embed, .markdown-rendered) :is(th, td) {
   border-inline-width: 0;
+}
+
+@container style(--fas-table-style: plain) {
+  body > * {
+    --table-background: color-mix(in hwb, var(--background-primary), rgb(var(--mono-rgb-100)) 3%);
+    --table-border-color: transparent;
+    --table-header-border-color: var(--table-border-color);
+    --table-column-alt-background: none;
+    --table-header-background: color-mix(in hwb, var(--background-primary), rgb(var(--mono-rgb-0)) 30%);
+    --table-header-border-width: 1px;
+    --table-row-alt-background: var(--background-primary-alt);
+    --table-row-alt-background-hover: var(--table-row-alt-background);
+    --table-row-background-hover: var(--table-background);
+    --table-line-height: 1.5;
+  }
+  .cm-html-embed :is(th, td),
+  .markdown-rendered :is(th, td) {
+    border-inline-width: var(--table-border-width);
+  }
+  table thead th {
+    border-bottom-width: var(--table-border-width);
+  }
 }
