--- a/snippets/cssclasses/banner.css
+++ b/snippets/cssclasses/banner.css
@@ -8,7 +8,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   container: markdown-view/inline-size;
 }
 
-.markdown-preview-section {
+.markdown-preview-section:not(.markdown-embed *) {
   anchor-name: --anchor-preview-section;
 }
 
@@ -48,6 +48,7 @@ body {
 
 .markdown-preview-view.banner {
   --inline-title-margin-bottom: 0;
+  --page-title-color: var(--text-normal);
   isolation: isolate;
 }
 .markdown-preview-view.banner .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) {
@@ -68,7 +69,8 @@ body {
 .markdown-preview-view.banner .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) + br {
   display: none;
 }
-.markdown-preview-view.banner .inline-title {
+.markdown-preview-view.banner .inline-title,
+.markdown-preview-view.banner .page-header {
   position: absolute;
   top: var(--file-margins-block);
   left: var(--file-margins-inline);
@@ -115,8 +117,8 @@ body {
     }
   }
 }
-.markdown-preview-view:not(.show-properties).banner .mod-header,
-.markdown-preview-view.hide-properties.banner .mod-header {
+.markdown-preview-view:not(.show-properties).banner > * > .mod-header,
+.markdown-preview-view.hide-properties.banner > * > .mod-header {
   height: calc(var(--banner-height) - var(--file-margins-block));
   padding-bottom: var(--file-margins-block);
 }
@@ -138,7 +140,8 @@ body {
 .markdown-preview-view.banner.banner-title {
   --inline-title-line-height: 3;
 }
-.markdown-preview-view.banner.banner-title .inline-title {
+.markdown-preview-view.banner.banner-title .inline-title,
+.markdown-preview-view.banner.banner-title .page-header {
   position: absolute;
   top: calc(var(--banner-height) * 0.5);
   right: 50%;
@@ -174,7 +177,9 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)), 0 calc(100% - var(--banner-slope-border-width)));
 }
 .markdown-preview-view.banner.banner-slant .inline-title,
-.markdown-preview-view.banner.banner-slope .inline-title {
+.markdown-preview-view.banner.banner-slant .page-header,
+.markdown-preview-view.banner.banner-slope .inline-title,
+.markdown-preview-view.banner.banner-slope .page-header {
   position: absolute;
   transform: rotate(calc(-1 * var(--banner-slope-angle)));
   transform-origin: bottom left;
@@ -185,7 +190,7 @@ body {
 }
 
 @supports (top: anchor(--anchor-preview-section top)) and (right: anchor(--anchor-preview-section right)) {
-  .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
+  .markdown-preview-view.banner:is(.banner-slant, .banner-slope) :is(.inline-title, .page-header) {
     top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) - 1em - var(--banner-title-shadow-size));
     right: anchor(--anchor-preview-section right, var(--file-margins-inline));
   }
