--- a/snippets/cssclasses/family-tree.css
+++ b/snippets/cssclasses/family-tree.css
@@ -17,17 +17,20 @@ body {
 }
 
 .callout[data-callout=family-tree] > .callout-content > ul,
-.family-tree .el-ul > ul {
+.family-tree .el-ul > ul,
+.family-tree > * > ul {
   --list-spacing: 0;
   --list-indent: 0;
   overflow-x: scroll;
 }
 .callout[data-callout=family-tree] > .callout-content > ul .list-bullet,
-.family-tree .el-ul > ul .list-bullet {
+.family-tree .el-ul > ul .list-bullet,
+.family-tree > * > ul .list-bullet {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator,
-.family-tree .el-ul > ul .list-collapse-indicator {
+.family-tree .el-ul > ul .list-collapse-indicator,
+.family-tree > * > ul .list-collapse-indicator {
   position: absolute;
   opacity: 1;
   top: 10px;
@@ -44,27 +47,33 @@ body {
   z-index: 1;
 }
 .callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator.is-collapsed,
-.family-tree .el-ul > ul .list-collapse-indicator.is-collapsed {
+.family-tree .el-ul > ul .list-collapse-indicator.is-collapsed,
+.family-tree > * > ul .list-collapse-indicator.is-collapsed {
   background: var(--color-accent);
 }
 .callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator svg,
-.family-tree .el-ul > ul .list-collapse-indicator svg {
+.family-tree .el-ul > ul .list-collapse-indicator svg,
+.family-tree > * > ul .list-collapse-indicator svg {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li.is-collapsed,
-.family-tree .el-ul > ul li.is-collapsed {
+.family-tree .el-ul > ul li.is-collapsed,
+.family-tree > * > ul li.is-collapsed {
   text-wrap: nowrap;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li.is-collapsed > ul > *,
-.family-tree .el-ul > ul li.is-collapsed > ul > * {
+.family-tree .el-ul > ul li.is-collapsed > ul > *,
+.family-tree > * > ul li.is-collapsed > ul > * {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed),
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed),
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child {
   display: none;
   position: absolute;
   left: 50%;
@@ -79,22 +88,25 @@ body {
   top: 0;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before {
   content: "Wed to ";
   display: unset;
   position: unset;
   color: #727272;
 }
-.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet,
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet {
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet,
+.family-tree .el-ul > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet,
+.family-tree > * > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet {
   display: inline-block;
   float: none;
   margin-inline-start: 0;
   margin-inline-end: 0.1em;
   transform: translateY(-0.2em);
 }
-.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after,
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after {
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet::after,
+.family-tree .el-ul > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet::after,
+.family-tree > * > ul li:has(> .tag[href="#wed"], > .wed) > .list-bullet::after {
   content: "💍";
   position: static;
   margin: 0;
@@ -105,40 +117,51 @@ body {
   box-shadow: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul)),
-.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child),
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child),
 .family-tree .el-ul > ul li:not(:has(ul)),
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) {
+.family-tree .el-ul > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child),
+.family-tree > * > ul li:not(:has(ul)),
+.family-tree > * > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child) {
   text-wrap: nowrap;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul)) .list-collapse-indicator,
-.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) .list-collapse-indicator,
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child) .list-collapse-indicator,
 .family-tree .el-ul > ul li:not(:has(ul)) .list-collapse-indicator,
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) .list-collapse-indicator {
+.family-tree .el-ul > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child) .list-collapse-indicator,
+.family-tree > * > ul li:not(:has(ul)) .list-collapse-indicator,
+.family-tree > * > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child) .list-collapse-indicator {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul ul:not(:has(ul))::before,
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
 .family-tree .el-ul > ul ul:not(:has(ul))::before,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
+.family-tree > * > ul ul:not(:has(ul))::before,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
   height: 30px;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul))::after,
-.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child)::after,
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child)::after,
 .family-tree .el-ul > ul li:not(:has(ul))::after,
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child)::after {
+.family-tree .el-ul > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child)::after,
+.family-tree > * > ul li:not(:has(ul))::after,
+.family-tree > * > ul li:has(> .tag[href="#wed"] + ul > li:only-child, > .wed + ul > li:only-child)::after {
   height: 20px;
 }
 .callout[data-callout=family-tree] > .callout-content > ul,
 .callout[data-callout=family-tree] > .callout-content > ul ul,
 .family-tree .el-ul > ul,
-.family-tree .el-ul > ul ul {
+.family-tree .el-ul > ul ul,
+.family-tree > * > ul,
+.family-tree > * > ul ul {
   display: flex;
   padding-top: 10px;
   margin-top: 0px;
   position: relative;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li,
-.family-tree .el-ul > ul li {
+.family-tree .el-ul > ul li,
+.family-tree > * > ul li {
   float: left;
   text-align: center;
   list-style-type: none;
@@ -150,7 +173,9 @@ body {
 .callout[data-callout=family-tree] > .callout-content > ul li::before,
 .callout[data-callout=family-tree] > .callout-content > ul li::after,
 .family-tree .el-ul > ul li::before,
-.family-tree .el-ul > ul li::after {
+.family-tree .el-ul > ul li::after,
+.family-tree > * > ul li::before,
+.family-tree > * > ul li::after {
   content: "";
   position: absolute;
   top: 0;
@@ -160,11 +185,13 @@ body {
   height: 10px;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after {
   content: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li::after,
-.family-tree .el-ul > ul li::after {
+.family-tree .el-ul > ul li::after,
+.family-tree > * > ul li::after {
   right: auto;
   left: 50%;
   border-left: 1px solid var(--family-tree-connectors-color);
@@ -172,7 +199,9 @@ body {
 .callout[data-callout=family-tree] > .callout-content > ul li:only-child::after,
 .callout[data-callout=family-tree] > .callout-content > ul li:only-child::before,
 .family-tree .el-ul > ul li:only-child::after,
-.family-tree .el-ul > ul li:only-child::before {
+.family-tree .el-ul > ul li:only-child::before,
+.family-tree > * > ul li:only-child::after,
+.family-tree > * > ul li:only-child::before {
   display: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before,
@@ -180,15 +209,20 @@ body {
 .callout[data-callout=family-tree] > .callout-content > ul li:last-child::after,
 .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before,
 .family-tree .el-ul > ul li:first-child::before,
-.family-tree .el-ul > ul li:last-child::after {
+.family-tree .el-ul > ul li:last-child::after,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before,
+.family-tree > * > ul li:first-child::before,
+.family-tree > * > ul li:last-child::after {
   border-top: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul li:only-child,
-.family-tree .el-ul > ul li:only-child {
+.family-tree .el-ul > ul li:only-child,
+.family-tree > * > ul li:only-child {
   padding-top: 0;
 }
 .callout[data-callout=family-tree] > .callout-content > ul ul::before,
-.family-tree .el-ul > ul ul::before {
+.family-tree .el-ul > ul ul::before,
+.family-tree > * > ul ul::before {
   content: "";
   position: absolute;
   top: 0;
@@ -201,19 +235,24 @@ body {
   border-inline-end: unset;
 }
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before {
   height: 10px;
 }
 .callout[data-callout=family-tree] > .callout-content > ul ul:not(:has(> li))::before,
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
 .family-tree .el-ul > ul ul:not(:has(> li))::before,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
+.family-tree > * > ul ul:not(:has(> li))::before,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
   content: none;
 }
 .callout[data-callout=family-tree] > .callout-content > ul ul:not(.tag[href="#wed"], .wed + ul) > li:only-child::after,
 .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after,
 .family-tree .el-ul > ul ul:not(.tag[href="#wed"], .wed + ul) > li:only-child::after,
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
+.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after,
+.family-tree > * > ul ul:not(.tag[href="#wed"], .wed + ul) > li:only-child::after,
+.family-tree > * > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
   content: none;
 }
 
@@ -226,8 +265,8 @@ body {
   .family-tree .el-ul > ul .list-collapse-indicator.is-collapsed:hover {
     background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 30%);
   }
-  .callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child,
-  .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child {
+  .callout[data-callout=family-tree] > .callout-content > ul li:has(> .tag[href="#wed"], > .wed):has(> .list-bullet:hover) > ul > li:first-child,
+  .family-tree .el-ul > ul li:has(> .tag[href="#wed"], > .wed):has(> .list-bullet:hover) > ul > li:first-child {
     display: block;
   }
 }
