--- a/snippets/cssclasses/list-reversed.css
+++ b/snippets/cssclasses/list-reversed.css
@@ -2,76 +2,103 @@
 FAS - List Reversed
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.list-reversed-1 :is(.el-ul, .el-ol) > :is(ul, ol) {
+.list-reversed-1 :is(.el-ul, .el-ol) > :is(ul, ol),
+.list-reversed-1 > * > :is(ul, ol) {
   transform: scaleY(-1);
 }
-.list-reversed-1 :is(.el-ul, .el-ol) > :is(ul, ol) > li {
-  transform: scaleY(-1);
-}
-
-.list-reversed-2 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) {
-  transform: scaleY(-1);
-}
-.list-reversed-2 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li {
+.list-reversed-1 :is(.el-ul, .el-ol) > :is(ul, ol) > li,
+.list-reversed-1 > * > :is(ul, ol) > li {
   transform: scaleY(-1);
 }
 
-.list-reversed-3 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+.list-reversed-2 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-2 > * > :is(ul, ol) > li > :is(ul, ol) {
   transform: scaleY(-1);
 }
-.list-reversed-3 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
-  transform: scaleY(-1);
-}
-
-.list-reversed-4 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
-  transform: scaleY(-1);
-}
-.list-reversed-4 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+.list-reversed-2 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-2 > * > :is(ul, ol) > li > :is(ul, ol) > li {
   transform: scaleY(-1);
 }
 
-.list-reversed-5 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+.list-reversed-3 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-3 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
   transform: scaleY(-1);
 }
-.list-reversed-5 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
-  transform: scaleY(-1);
-}
-
-.list-reversed-6 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
-  transform: scaleY(-1);
-}
-.list-reversed-6 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+.list-reversed-3 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-3 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
   transform: scaleY(-1);
 }
 
-.list-reversed-7 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+.list-reversed-4 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-4 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
   transform: scaleY(-1);
 }
-.list-reversed-7 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
-  transform: scaleY(-1);
-}
-
-.list-reversed-8 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
-  transform: scaleY(-1);
-}
-.list-reversed-8 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+.list-reversed-4 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-4 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
   transform: scaleY(-1);
 }
 
-.list-reversed-9 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+.list-reversed-5 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-5 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
   transform: scaleY(-1);
 }
-.list-reversed-9 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
-  transform: scaleY(-1);
-}
-
-.list-reversed-10 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
-  transform: scaleY(-1);
-}
-.list-reversed-10 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+.list-reversed-5 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-5 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
   transform: scaleY(-1);
 }
 
-.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol), .list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) ul, .list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) ol, .list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) li {
+.list-reversed-6 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-6 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+  transform: scaleY(-1);
+}
+.list-reversed-6 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-6 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+  transform: scaleY(-1);
+}
+
+.list-reversed-7 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-7 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+  transform: scaleY(-1);
+}
+.list-reversed-7 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-7 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+  transform: scaleY(-1);
+}
+
+.list-reversed-8 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-8 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+  transform: scaleY(-1);
+}
+.list-reversed-8 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-8 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+  transform: scaleY(-1);
+}
+
+.list-reversed-9 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-9 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+  transform: scaleY(-1);
+}
+.list-reversed-9 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-9 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+  transform: scaleY(-1);
+}
+
+.list-reversed-10 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol),
+.list-reversed-10 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) {
+  transform: scaleY(-1);
+}
+.list-reversed-10 :is(.el-ul, .el-ol) > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li,
+.list-reversed-10 > * > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li > :is(ul, ol) > li {
+  transform: scaleY(-1);
+}
+
+.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol),
+.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) ul,
+.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) ol,
+.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) li,
+.list-reversed-all .markdown-preview-view > * > :is(ul, ol),
+.list-reversed-all .markdown-preview-view > * > :is(ul, ol) ul,
+.list-reversed-all .markdown-preview-view > * > :is(ul, ol) ol,
+.list-reversed-all .markdown-preview-view > * > :is(ul, ol) li {
   transform: scaleY(-1);
 }
