--- a/snippets/cssclasses/newspaper.css
+++ b/snippets/cssclasses/newspaper.css
@@ -42,6 +42,7 @@ body {
 
 .newspaper {
   --inline-title-font: "Playfair Display", Georgia, "Times New Roman", Times, serif;
+  --page-title-font: "Playfair Display", Georgia, "Times New Roman", Times, serif;
   --inline-title-padding-top: var(--inline-title-margin-bottom);
   --bold-modifier: 500;
   --font-text: Spectral, "Times New Roman", Times, serif;
@@ -71,11 +72,11 @@ body {
   inset-inline-start: -22px;
 }
 
-.newspaper .inline-title {
+.newspaper :is(.inline-title, .page-header) {
   text-align: center;
 }
 
-.newspaper .inline-title::after {
+.newspaper :is(.inline-title, .page-header)::after {
   content: "";
   display: block;
   padding-top: var(--inline-title-padding-top);
