--- a/snippets/cssclasses/no-title.css
+++ b/snippets/cssclasses/no-title.css
@@ -1,3 +1,4 @@
-.markdown-preview-view.no-title .inline-title {
+.markdown-preview-view.no-title .inline-title,
+.markdown-preview-view.no-title .page-header {
   display: none;
 }
