--- a/snippets/cssclasses/note-accent.css
+++ b/snippets/cssclasses/note-accent.css
@@ -80,8 +80,18 @@ body.theme-dark {
   --accent-l: var(--note-accent-6-l);
 }
 
-.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
-.markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+.markdown-source-view:is(.note-accent-1,
+.note-accent-2,
+.note-accent-3,
+.note-accent-4,
+.note-accent-5,
+.note-accent-6),
+.markdown-preview-view:is(.note-accent-1,
+.note-accent-2,
+.note-accent-3,
+.note-accent-4,
+.note-accent-5,
+.note-accent-6) {
   --color-accent-hsl: var(--accent-h), var(--accent-s), var(--accent-l);
   --color-accent: hsl(var(--accent-h), var(--accent-s), var(--accent-l));
   --color-accent-1: hsl(calc(var(--accent-h) - 3), calc(var(--accent-s) * 1.02), calc(var(--accent-l) * 1.15));
@@ -119,16 +129,28 @@ body.theme-dark {
 }
 
 /* Specific to the theme */
-.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
-.markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+.markdown-source-view:is(.note-accent-1,
+.note-accent-2,
+.note-accent-3,
+.note-accent-4,
+.note-accent-5,
+.note-accent-6),
+.markdown-preview-view:is(.note-accent-1,
+.note-accent-2,
+.note-accent-3,
+.note-accent-4,
+.note-accent-5,
+.note-accent-6) {
   --banner-slope-border-color: var(--color-accent);
 }
 
-.headings-accent:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
-  --h1-color: var(--color-accent);
-  --h2-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 10%);
-  --h3-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 20%);
-  --h4-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 40%);
-  --h5-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 60%);
-  --h6-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 80%);
+@container style(--heading-color: accent) {
+  :is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) > * {
+    --h1-color: var(--color-accent);
+    --h2-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 10%);
+    --h3-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 20%);
+    --h4-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 40%);
+    --h5-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 60%);
+    --h6-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 80%);
+  }
 }
