--- a/snippets/editor/headings/headings-color.css
+++ b/snippets/editor/headings/headings-color.css
@@ -28,7 +28,7 @@ Author: ElsaTam (Kapirklaa in Discord)
     );
   }
 }
-@supports not (color: hsln(from white h s l)) {
+@supports not (color: hsl(from white h s l)) {
   .style-settings-container .setting-item[data-id=header-color] .setting-item-info::after {
     content: '"Hue" and "Complementary hue" not supported on your device.';
     color: var(--text-muted);
@@ -37,34 +37,58 @@ Author: ElsaTam (Kapirklaa in Discord)
     line-height: var(--line-height-tight);
   }
 }
+body {
+  --heading-color: none;
+}
+
 .headings-hue {
-  --header-gradient-base-color: var(--middle-color);
+  --heading-color: hue;
 }
 
 .headings-complement {
-  --header-gradient-base-color: var(--middle-color-complement);
+  --heading-color: complement;
 }
 
 .headings-accent {
-  --header-gradient-base-color: var(--text-accent);
-}
-
-.headings-hue,
-.headings-complement,
-.headings-accent {
-  --h1-color: var(--header-gradient-base-color);
-  --h2-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 10%);
-  --h3-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 20%);
-  --h4-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 40%);
-  --h5-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 60%);
-  --h6-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 80%);
+  --heading-color: accent;
 }
 
 .headings-rainbow {
-  --h1-color: var(--color-rainbow-1);
-  --h2-color: var(--color-rainbow-2);
-  --h3-color: var(--color-rainbow-3);
-  --h4-color: var(--color-rainbow-4);
-  --h5-color: var(--color-rainbow-5);
-  --h6-color: var(--color-rainbow-6);
+  --heading-color: rainbow;
+}
+
+@container style(--heading-color: hue) {
+  :is(.markdown-source-view, .markdown-preview-view) > * {
+    --header-gradient-base-color: var(--middle-color);
+  }
+}
+@container style(--heading-color: complement) {
+  :is(.markdown-source-view, .markdown-preview-view) > * {
+    --header-gradient-base-color: var(--middle-color-complement);
+  }
+}
+@container style(--heading-color: accent) {
+  :is(.markdown-source-view, .markdown-preview-view) > * {
+    --header-gradient-base-color: var(--text-accent);
+  }
+}
+@container style(--heading-color: hue) or style(--heading-color: complement) or style(--heading-color: accent) {
+  :is(.markdown-source-view, .markdown-preview-view) > * {
+    --h1-color: var(--header-gradient-base-color);
+    --h2-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 10%);
+    --h3-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 20%);
+    --h4-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 40%);
+    --h5-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 60%);
+    --h6-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 80%);
+  }
+}
+@container style(--heading-color: rainbow) {
+  :is(.markdown-source-view, .markdown-preview-view) > * {
+    --h1-color: var(--color-rainbow-1);
+    --h2-color: var(--color-rainbow-2);
+    --h3-color: var(--color-rainbow-3);
+    --h4-color: var(--color-rainbow-4);
+    --h5-color: var(--color-rainbow-5);
+    --h6-color: var(--color-rainbow-6);
+  }
 }
