--- a/snippets/editor/tables/fas-default-tables.css
+++ b/snippets/editor/tables/fas-default-tables.css
@@ -1,4 +1,5 @@
 body {
+  --fas-table-style: default;
   --table-header-background: transparent;
   --table-line-height: 1.8;
   --table-border-color: var(--color-base-10);
