--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -2,7 +2,7 @@
 @forward "../shared/cutouts";
 @forward "../shared/workleaves";
 
-@use "floating-mode-button";
+//@use "floating-mode-button";
 
 .is-mobile {
     --font-ui-smaller: 13.5px;
