Square radii on mobile

--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -14,6 +14,16 @@
     --icon-m: 18px;
     --icon-l: 20px;
     --link-decoration-thickness: 1px;
+
+    --clickable-icon-radius: 0px;
+    --mobile-sidebar-radius: 0px;
+    --navbar-radius: 0px;
+    --touch-radius-xxs: 0px;
+    --touch-radius-xs: 0px;
+    --touch-radius-s: 0px;
+    --touch-radius-m: 0px;
+    --touch-radius-l: 0px;
+    --touch-radius-xl: 0px;
 }
 
 .workspace-drawer-active-tab-header {
